# contextswitch_backend

./: .gitignore  pyproject.toml
auth_user/: managers.py  models.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
session/: models.py  serializers.py  urls.py  views.py
task/: models.py  urls.py  views.py
